# FoundryManager

./: .flake8  .pre-commit-config.yaml  README.md  backend.Dockerfile  docker-compose.yml  pyproject.toml
backend/: main.py
backend/controllers/: base_controller.py
